cabal-version:      2.4
name:               muchron
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: A timer and music player for optimizing productivity

-- A longer description of the package.
description: Plays music/video files with mpv. muchron's main purpose is to help manage time, focus, and music when studying

-- A URL where users can report bugs.
bug-reports: https://github.com/BardofSprites/muchron

-- The license under which the package is released.
license: GPL v3.0

-- The package author(s).
author: bardman

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

category: productivity, music
        
extra-source-files: CHANGELOG.md

executable muchron
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Timer, PomodoroTimer

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
                      , gtk
    hs-source-dirs:   app
    default-language: Haskell2010
